Fixed invisible button labels on mobile

--- a/wcfsetup/install/files/style/layout/content.scss
+++ b/wcfsetup/install/files/style/layout/content.scss
@@ -410,6 +410,10 @@ fieldset {
 				display: block;
 				padding: 7px 10px;
 				text-align: center;
+				
+				> .invisible {
+					display: inline;
+				}
 			}
 		}
 	}
